fix: user creation with old user list layout broken on desktop

--- a/src/app/parking/parking.component.scss
+++ b/src/app/parking/parking.component.scss
@@ -111,7 +111,7 @@
 			max-width: 140px;
 		}
 
-		.parking-slot-form-group {
+		.parking-slot-form-slot-form-group {
 			font-size: 1.2rem;
 			line-height: 2rem;
 		}
